Ensure menu is visible

--- a/content/themes/twolittlenomads/assets/css/screen.css
+++ b/content/themes/twolittlenomads/assets/css/screen.css
@@ -523,6 +523,10 @@ body.nav-opened .site-wrapper {
 
 .main-nav {
     position: relative;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    
 }
 
 .main-nav a {
@@ -829,6 +833,7 @@ body.nav-opened .nav {
 .nav-closed .menu-button {
     color: #fff;
     border-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(0,0,0,0.2)
 }
 .nav-closed .menu-button:hover {
     color: #222;
@@ -861,16 +866,6 @@ body.nav-opened .nav {
     transition: all 0.3s ease;
 }
 
-/* Special styles when overlaid on an image*/
-.main-nav.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 70px;
-    border: none;
-    background: linear-gradient(to bottom, rgba(0,0,0,0.2) 0%,rgba(0,0,0,0) 100%);
-}
 .no-cover .main-nav.overlay {
     background: none;
 }
@@ -1984,10 +1979,6 @@ hr.post-date-line {
 
     .post-template .post-header {
         margin-bottom: 2rem;
-    }
-
-    .post-template .post-date {
-        display: inline-block;
     }
 
     hr {
